# BoyiaEngine

./: .gitignore  .project  AndroidManifest.xml  FindMistake_v7a.bat  FindMistake_v8a.bat  PROGRAM.md  README.md  build.gradle  build.sh  build_mac.sh  gradle.properties  library.gradle  lint.xml  maven.bat  project.properties  settings.gradle
BoyiaFramework/buildtool/boyia/: CMakeLists.txt
core/src/main/jni/Boyia/: Android.mk  CMakeLists.txt
core/src/main/jni/Boyia/framework/: Android.by.mk  Android.fw.mk  Android.fw.util.mk  Android.vm.mk
core/src/main/jni/Boyia/framework/byvm/app/: BoyiaActivity.cpp  BoyiaActivity.h  BoyiaAppStack.cpp  BoyiaAppStack.h  BoyiaApplication.cpp  BoyiaApplication.h
core/src/main/jni/Boyia/framework/byvm/binds/: BoyiaBindings.cpp  BoyiaNetwork.cpp  BoyiaNetwork.h  BoyiaView.h  BoyiaViewDoc.cpp  BoyiaViewDoc.h
core/src/main/jni/Boyia/framework/byvm/core/: BoyiaCore.cpp  BoyiaCore.h  BoyiaMemory.cpp  BoyiaValue.cpp  BoyiaValue.h
core/src/main/jni/Boyia/framework/byvm/jit/: BoyiaAssembler.h  BoyiaOpcode.cpp  BoyiaOpcode.h  BoyiaOperand.cpp
core/src/main/jni/Boyia/framework/dom/: DOMBuilder.cpp  DOMBuilder.h  TinyXml2.cpp  TinyXml2.h
core/src/main/jni/Boyia/framework/gui/: LBaseView.cpp  LBaseView.h  LColor.cpp  LEvent.h  LGdi.h
core/src/main/jni/Boyia/framework/loader/: NetworkBase.h  ResourceLoader.cpp  ResourceLoader.h  ResourceLoaderClient.h  StartupLoader.cpp  StartupLoader.h
core/src/main/jni/Boyia/framework/platform/: PlatformBridge.cpp  PlatformBridge.h  SalLog.h
core/src/main/jni/Boyia/framework/platform/android/: AutoObject.cpp  AutoObject.h  EditorAndroid.cpp  EditorAndroid.h  FontAndroid.h  ImageAndroid.cpp  ImageAndroid.h  JNIUtil.cpp  JNIUtil.h  LoaderAndroid.cpp  LoaderAndroid.h
core/src/main/jni/Boyia/framework/platform/arm/: ArmFunction.cpp
core/src/main/jni/Boyia/framework/platform/graphics/: Animation.cpp  Animation.h  GLContext.cpp  GLContext.h  GraphicsContextGL.cpp  GraphicsContextGL.h  PaintThread.cpp  PaintThread.h
core/src/main/jni/Boyia/framework/style/: CssManager.cpp  CssManager.h  CssParser.cpp  CssRule.cpp  CssRule.h  CssTags.cpp  CssTags.h  DoctreeNode.cpp  Style.cpp  Style.h
core/src/main/jni/Boyia/framework/util/: BoyiaPtr.h  BoyiaRef.cpp  BoyiaRef.h  FileUtil.cpp  FileUtil.h  HashMap.h  IDCreator.cpp  IDCreator.h  IdentityMap.cpp  IdentityMap.h  InputStream.cpp  InputStream.h  KList.h  KListMap.h  KRef.cpp  KRef.h  KRefPtr.h  KSet.h  KVector.h  PlatformLib.cpp  PlatformLib.h  Stack.h  StringUtils.h  TagMap.cpp  TagMap.h  Utf8StreamReader.cpp  Utf8StreamReader.h  UtilString.h
core/src/main/jni/Boyia/framework/view/: UIOperation.cpp  UIOperation.h  UIThread.cpp  UIThread.h  UIView.cpp  UIView.h  UIViewController.cpp  UIViewController.h  UIViewThread.cpp  UIViewThread.h
core/src/main/jni/Boyia/framework/vm/core/: BoyiaCore.cpp  BoyiaCore.h  BoyiaError.cpp  BoyiaError.h  BoyiaGC.cpp  BoyiaMemory.cpp  BoyiaMemory.h  BoyiaValue.cpp  BoyiaValue.h
core/src/main/jni/Boyia/framework/vm/jit/: BoyiaAsmUtils.h  BoyiaAssembler.cpp  BoyiaExecution.cpp  BoyiaExecution.h  BoyiaOpcode.cpp  BoyiaOperand.cpp  BoyiaOperand.h
core/src/main/jni/Boyia/framework/vm/json/: JSONParser.cpp  JSONParser.h
core/src/main/jni/Boyia/framework/vm/lib/: BoyiaLib.cpp  BoyiaSocket.cpp  BoyiaSocket.h  BoyiaThread.cpp  BoyiaThread.h
core/src/main/jni/Boyia/framework/vm/view/: BoyiaBase.cpp  BoyiaBase.h  BoyiaEventHandler.cpp  BoyiaImageView.cpp  BoyiaInputView.h  BoyiaNetwork.cpp  BoyiaNetwork.h  BoyiaView.cpp  BoyiaView.h  BoyiaViewDoc.cpp  BoyiaViewGroup.cpp  BoyiaViewGroup.h
core/src/main/jni/Boyia/framework/widget/: BlockView.cpp  BlockView.h  HtmlDocument.cpp  HtmlDocument.h  HtmlForm.cpp  HtmlRenderer.cpp  HtmlRenderer.h  HtmlTags.cpp  HtmlTags.h  HtmlView.cpp  HtmlView.h  IViewListener.h  ImageView.cpp  ImageView.h  InlineView.cpp  InlineView.h  InputView.cpp  InputView.h  LinkView.cpp  LinkView.h  RenderContext.cpp  RenderContext.h  TextView.cpp  TextView.h  VideoView.cpp  VideoView.h
core/src/main/jni/Boyia/framework/widget/flex/: FlexLayout.cpp  FlexLayout.h
core/src/main/jni/Boyia/graphics/: Android.graphics.mk
core/src/main/jni/Boyia/graphics/core/: LoadObjectUtil.cpp  LoadObjectUtil.h  Matrix.cpp  Matrix.h  MatrixState.cpp  MatrixState.h  ShaderUtil.cpp  ShaderUtil.h
core/src/main/jni/Boyia/graphics/painter/: BoyiaPainterEnv.cpp  BoyiaPainterEnv.h  BoyiaRenderer.cpp  BoyiaRenderer.h  GLPainter.cpp  GLPainter.h  GLProgram.cpp  GLProgram.h  MiniRenderer.cpp  MiniRenderer.h  MiniTextureCache.cpp  MiniTextureCache.h  RenderTexture.cpp  RenderTexture.h
core/src/main/jni/Boyia/graphics/shaders/: VertexSource.cpp  VertexSource.h
core/src/main/jni/Boyia/graphics/utils/: SystemUtil.cpp  SystemUtil.h
core/src/main/jni/Boyia/graphics/vulkan/: MemoryAllocator.cpp
core/src/main/jni/Boyia/imessage/: Android.im.mk
core/src/main/jni/Boyia/imessage/ptcp/: PseudoTcp.cpp  PseudoTcp.h
core/src/main/jni/Boyia/network/: Android.network.mk  BoyiaHttpEngine.cpp  BoyiaHttpEngine.h  BoyiaLoader.cpp  BoyiaLoader.h  StringBuffer.cpp  StringBuffer.h  StringBuilder.cpp  StringBuilder.h
core/src/main/jni/Boyia/network/font/: FontFreeType.cpp
core/src/main/jni/Boyia/network/image/: NetImage.cpp  NetImage.h
core/src/main/jni/Boyia/network/ipc/: BoyiaProcess.cpp  BoyiaProcess.h  MiniProcess.h
core/src/main/jni/Boyia/network/proxy/ptcp/: PseudoTcp.cpp
core/src/main/jni/Boyia/network/proxy/server/: ProxyServer.cpp
core/src/main/jni/Boyia/network/server/: ProxyServer.cpp
core/src/main/jni/Boyia/network/socket/: PseudoTcp.cpp  PseudoTcp.h
core/src/main/jni/Boyia/network/test/: TestLoader.cpp  TestThread.cpp
core/src/main/jni/Boyia/network/threadpool/: MiniBlockQueue.cpp  MiniBlockQueue.h  MiniMessageQueue.cpp  MiniMessageQueue.h  MiniMessageThread.cpp  MiniMessageThread.h  MiniMutex.cpp  MiniTaskBase.cpp  MiniTaskBase.h  MiniTaskThread.cpp  MiniTaskThread.h  MiniThread.cpp  MiniThread.h  MiniThreadPool.cpp  MiniThreadPool.h
core/src/main/jni/Boyia/porting/: BoyiaJniOnLoad.cpp  BoyiaViewCore.cpp
(+1680 files in other folders)
