cmake_minimum_required(VERSION 3.4.1)

file(
    GLOB 
    framework_src
    "framework/byvm/app/*.cpp"
    "framework/byvm/binds/*.cpp"
    "framework/byvm/core/*.cpp"
    "framework/byvm/jit/*.cpp"
    "framework/byvm/lib/*.cpp"
    "framework/byvm/json/*.c"
    "framework/dom/*.cpp"
    "framework/gui/*.cpp"
    "framework/loader/*.cpp"
    "framework/platform/android/*.cpp"
    "framework/platform/arm/*.cpp"
    "framework/platform/graphics/*.cpp"
    "framework/style/*.cpp"
    "framework/util/*.cpp"
    "framework/view/*.cpp"
    "framework/widget/*.cpp"
    )

file(
    GLOB 
    graphics_src
    "graphics/core/*.cpp"
    "graphics/painter/*.cpp"
    "graphics/shaders/*.cpp"
    "graphics/utils/*.cpp"
    "graphics/vulkan/*.cpp"
    ) 

file(
    GLOB 
    network_src
    "network/font/*.cpp"
    "network/image/*.cpp"
    "network/ipc/*.cpp"
    "network/test/*.cpp"
    "network/threadpool/*.cpp"
    "network/*.cpp"
    )

file(
    GLOB 
    porting_src
    "porting/*.cpp"
    )          

add_library(
    boyia
    SHARED
    ${framework_src}
    ${graphics_src}
    ${network_src}
    ${porting_src}
)

target_include_directories(
    boyia
    PRIVATE
    framework/byvm/app
    framework/byvm/binds
    framework/byvm/core
    framework/byvm/jit
    framework/byvm/json
    framework/byvm/lib
    framework/dom
    framework/gui
    framework/loader
    framework/platform/android
    framework/platform/arm
    framework/platform/graphics
    framework/platform
    framework/style
    framework/util
    framework/view
    framework/widget
    graphics/core
    graphics/shaders
    graphics/painter
    graphics/utils
    graphics/vulkan
    network
    network/font
    network/image
    network/ipc
    network/threadpool
)

target_link_libraries(
    boyia
    curl
    jpeg
    png
    ft2
    android
    log
)